--- a/bettermotherfuckingwebsite.html
+++ b/bettermotherfuckingwebsite.html
@@ -2,13 +2,14 @@
 <head
 <meta charset="utf-8"><meta
 name="viewport" content="width=device-width, initial-scale=1">
-<title>Better Motherfucking Website</title>
-<style type="text/css">body{margin:40px auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0 10px}h1,h2,h3{line-height:1.2}</style>
+<title>Wahooooo !!! Is it the Better Motherfucking Website ? </title>
+<style type="text/css">body{background-color: ##fff7f7; margin:40px auto;max-width:800px;line-height:1.6;font-size:18px;color:#444;padding:0 10px}h1,h2,h3{line-height:1.2}</style>
+
 </head>
 
 <body>
 
-<header><h1>This is <em>still</em> a motherfucking website.</h1>
+<header><h1 style="color: red;" >This is <em>still</em> a motherfucking website.</h1>
 <aside>And it's more fucking perfect than the last guy's.</aside>
 </header>
 <h2>Seriously, it takes minimal fucking effort to improve this shit.</h2>
@@ -30,7 +31,7 @@ name="viewport" content="width=device-width, initial-scale=1">
 
 <p>Look at lines 1 and 2 of some shitty website you're building. Assuming they're not married they probably shouldn't be humping. The defaults are trash -- pick a minimum <code>line-height: 1.4</code> for body copy. Headings should be tighter. If you can't see that...piss off.</p>
 
-<p>If your text hits the side of the browser, fuck off forever. You ever see a book like that? Yes? What a shitty book.</p><h2>A little less contrast</h2><p>Black on white? How often do you see that kind of contrast in real life? Tone it down a bit, asshole. I would've even made this site's background a nice <code>#EEEEEE</code> if I wasn't so focused on keeping declarations to a lean 7 fucking lines.</p>
+<p>If your text hits the side of the browser, fuck off forever. You ever see a book like that? Yes? What a shitty book.</p><h2>A little less contrast</h2><p>Black on white? How often do you see that kind of contrast in real life? Tone it down a bit, asshole. I would've even made this site's background a nice <code>#FFF7F7</code> if I wasn't so focused on keeping declarations to a lean 7 fucking lines.</p>
 
 <h2>Size Matters</h2><p>I know your partner says otherwise, but it's true. Bump that body copy to render close to 16px or more. Smaller type works well for print, not the screen.</p><h2>Line-width, motherfucker</h2><p>Looking at an LCD screen is strainful enough. Don't make me read a line of text that's 200 fucking characters long. Keep it to a nice 60-80 and users might actually read more than one sentence of your worthless dribble.</p>
 
