--- a/bettermotherfuckingwebsite.html
+++ b/bettermotherfuckingwebsite.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html><html>
-<head
-<meta charset="utf-8"><meta
-name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
 <title>Wahooooo !!! Is it the Better Motherfucking Website ? </title>
 <style type="text/css">body{background-color: ##fff7f7; margin:40px auto;max-width:800px;line-height:1.6;font-size:18px;color:#444;padding:0 10px}h1,h2,h3{line-height:1.2}</style>
-<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Better Motherfucking Website</title>
-<style type="text/css">body{margin:40px auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0 10px}h1,h2,h3{line-height:1.2}</style>
-</head>
 
+</head>
 <body>
 
-<header><h1 style="color: red;" >This is <em>still</em> a motherfucking website.</h1>
+<h1 style="color: red;" >This is <em>still</em> a motherfucking website.</h1>
 <aside>And it's more fucking perfect than the last guy's.</aside>
-</header>
+
 <h2>Seriously, it takes minimal fucking effort to improve this shit.</h2>
 
 <p><strong>7 fucking declarations.</strong></p>
